traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:73: error: Unmatched closing brace '}' ignored here
}
^